--- a/KituraiOS/iOS Sample Kitura Buddy/Base.lproj/Main.storyboard
+++ b/KituraiOS/iOS Sample Kitura Buddy/Base.lproj/Main.storyboard
@@ -219,6 +219,13 @@
                                     <action selector="pressedDone:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rW0-7g-H7r"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3pL-CP-Bls">
+                                <rect key="frame" x="16" y="126" width="342" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
